Fixes image flickering

--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -131,13 +131,13 @@ strong { font-weight:bold; }
     clear:both;
     overflow:hidden;
 
-    img {
+    & > img {
       -webkit-transition: all 100ms ease-in-out;
     }
 
-     &:hover img {
-       -webkit-transform: scale(1.2);
-     }
+    &:hover img {
+      -webkit-transform: scale(1.2);
+    }
 
     a {
       display:block;
@@ -209,12 +209,13 @@ strong { font-weight:bold; }
       margin: 0 0 30px 0;
 
       background: #f1f1f1;
-      @include border-radius(400px);
+      @include border-radius(500px);
 
       clear:both;
       overflow:hidden;
 
       img {
+        @include border-radius(500px);
         @include absolute-center(200px);
       }
 
